--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="line">
           <a 
              id="rotate-word" 
-             href="https://youtube.com/@hyperplexed" 
+             href="https://github.com/PP-Namias" 
              target="_blank" 
              class="word fancy"
           >
