--- a/index.html
+++ b/index.html
@@ -44,6 +44,6 @@
   </div>
 
   <script src="https://kit.fontawesome.com/1ee8f271b9.js"></script>
-  <script src="./script.js"></script>
+  <script src="./js/script.js"></script>
 </body>
 </html>
