--- a/index.html
+++ b/index.html
@@ -2,7 +2,25 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="description" content="Full Name Rotation is a website that showcases a mesmerizing animation of a galaxy using only HTML, CSS, and JavaScript.">
+  <meta name="keywords" content="Jhon Keneth Ryan B. Namias, Jhon Keneth Namias, PP Namias onepage, PP Namias developer, PP Namias resume, cv, PP Namias personal,PP Namias portfolio, PP Namias personal resume, PP Namias clean, PP-Namias, PP_Namias, Full Name Rotation, Galaxy, Animation, Solar System, Solar System Animation">
+  <meta name="author" content="PP-Namias">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta property="og:url" content="https://pp-namias.github.io/Full-Name-Rotation/">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="PP Namias | Full Name Rotation"/> 
+  <meta property="og:image" content="https://pp-namias.github.io/Full-Name-Rotation/img/screenshot.jpeg"/>
+  <meta property="og:image:alt" content="PP Namias | Full Name Rotation">
+  <meta property="og:description" content="Full Name Rotation - is a web system project created for the midterm exam of the Web System subject. The purpose of this project is to allow users to rotate their full name in various directions."/>
+  <meta name="twitter:card" content="summary_large_image">
+  <meta property="twitter:domain" content="pp-namias.github.io">
+  <meta property="twitter:url" content="https://pp-namias.github.io/Full-Name-Rotation/">
+  <meta name="twitter:title" content="PP Namias | Full Name Rotation">
+  <meta name="twitter:description" content="Full Name Rotation - is a web system project created for the midterm exam of the Web System subject. The purpose of this project is to allow users to rotate their full name in various directions.">
+  <meta name="twitter:image" content="https://pp-namias.github.io/Full-Name-Rotation/img/screenshot.jpeg">
+
+  <title>PP Namias | Full Name Rotation</title>
 
   <link rel="icon" type="image/png" sizes="32x32" href="./img/pp namias.png">
   
@@ -12,7 +30,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./css/style.css">
 
-  <title>PP Namias | Full Name Rotation</title>
 </head>
 
 <body>
