--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="description" content="Full Name Rotation is a website that showcases a mesmerizing animation of a galaxy using only HTML, CSS, and JavaScript.">
-  <meta name="keywords" content="Jhon Keneth Ryan B. Namias, Jhon Keneth Namias, PP Namias onepage, PP Namias developer, PP Namias resume, cv, PP Namias personal,PP Namias portfolio, PP Namias personal resume, PP Namias clean, PP-Namias, PP_Namias, Full Name Rotation, Galaxy, Animation, Solar System, Solar System Animation">
+  <meta name="keywords" content="Jhon Keneth Ryan B. Namias, Jhon Keneth Namias, PP Namias onepage, PP Namias developer, PP Namias resume, cv, PP Namias personal,PP Namias portfolio, PP Namias personal resume, PP Namias clean, PP-Namias, PP_Namias, Full Name Rotation">
   <meta name="author" content="PP-Namias">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta property="og:url" content="https://pp-namias.github.io/Full-Name-Rotation/">
