--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content="Full Name Rotation is a website that showcases a mesmerizing animation of a galaxy using only HTML, CSS, and JavaScript.">
+  <meta name="description" content="Full Name Rotation is a web system project created for the midterm exam of the Web System subject. The purpose of this project is to allow users to rotate their full name in various directions.">
   <meta name="keywords" content="Jhon Keneth Ryan B. Namias, Jhon Keneth Namias, PP Namias onepage, PP Namias developer, PP Namias resume, cv, PP Namias personal,PP Namias portfolio, PP Namias personal resume, PP Namias clean, PP-Namias, PP_Namias, Full Name Rotation">
   <meta name="author" content="PP-Namias">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -29,7 +29,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Lexend+Deca&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./css/style.css">
-
 </head>
 
 <body>
